<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/signUp"
        android:textColor="@color/primary"
        android:textSize="@dimen/big_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@+id/usernameSignUp"
        app:layout_constraintTop_toBottomOf="@+id/signUptext" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_left"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTextSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@+id/usernameSignUp"
        app:layout_constraintTop_toBottomOf="@id/usernameSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text|textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cpasswordTextSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/cpassword"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUp"
        app:layout_constraintTop_toBottomOf="@id/passwordSignUp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_left"
        app:endIconMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpasswordTextSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cpasswordEditTextSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpassword"
            android:inputType="text|textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_left"
        android:text="@string/signUp"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpasswordSignUp" />

    <LinearLayout
        android:id="@+id/signIpcontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUp"
        app:layout_constraintStart_toStartOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/signUp">

        <TextView
            android:id="@+id/create_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/acc_exist"
            android:textSize="@dimen/normal_text" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onTextClick"
            android:text="@string/signIn"
            android:textColor="@color/primary"
            android:textSize="@dimen/normal_text"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>