<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SignInActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/signInCard"
        style="@style/cardStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/usernameH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_left"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameH">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text|textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passwordH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_left"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/username"
                app:layout_constraintStart_toStartOf="@+id/username"
                app:layout_constraintTop_toBottomOf="@+id/passwordH">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="text|textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_left"
                android:text="@string/signIn"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/or"
                android:textSize="@dimen/normal_text"
                app:layout_constraintEnd_toEndOf="@+id/signIn"
                app:layout_constraintStart_toStartOf="@+id/signIn"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />

            <LinearLayout
                android:id="@+id/logoContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/signIn"
                app:layout_constraintStart_toStartOf="@+id/signIn"
                app:layout_constraintTop_toBottomOf="@+id/or">

                <ImageView
                    android:id="@+id/googleLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/google_logo"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onImageClick" />

                <ImageView
                    android:id="@+id/facebookLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/facebook_logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signUpcontainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/logoContainer"
                app:layout_constraintStart_toStartOf="@id/logoContainer"
                app:layout_constraintTop_toBottomOf="@+id/logoContainer">

                <TextView
                    android:id="@+id/create_acc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/create_acc"
                    android:textSize="@dimen/normal_text" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signUp"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:onClick="onTextClick"
                    android:focusable="true" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/logo_crop"
        app:layout_constraintBottom_toTopOf="@+id/signInCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>

